add styles to hide ageDisplay and text align headers in ageDisplayPlaceholder

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,3 +12,9 @@
   height: 20vw;
   object-fit: cover;
 }
+#ageDisplay {
+  display: none;
+}
+#ageDisplayPlaceholder, h3 {
+  text-align: center;
+}
